--- a/NCGSA_FRONTEND-mahnoor/client/package.json
+++ b/NCGSA_FRONTEND-mahnoor/client/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
+    "react-custom-alert": "^1.0.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-tailwindcss-datepicker": "^1.7.2",
